Revert "Fixed some double css styles and spacing."
This reverts commit a78bbe95cb76d5c1ef59172981215d0245dfb16d.

--- a/media/turan/base.css
+++ b/media/turan/base.css
@@ -12,13 +12,12 @@ body {
 h1 {
 	font-size: 175%;
 	font-weight: bolder;
-    margin: 0;
-	margin: 1em 0 0.5em;
+	margin: 0;
 }
 h2 {
 	font-size: 152%;
 	font-weight: bolder;
-	margin: 1em 0 0.5em;
+	margin: 0.5em 0 0.5em;
 }
 h3 {
 	font-size: 130%;
@@ -96,6 +95,9 @@ p, ul {
 }
 em {
 	font-style: italic;
+}
+ul {
+	margin-left: 0;
 }
 ul li {
 	list-style-type: square;
@@ -396,7 +398,6 @@ h1 a
 }
 ul {
     padding: 0;
-    margin: 0;
 }
 ul li ul { 
     padding-left: 10px; 
@@ -452,7 +453,7 @@ ul.trip_attributes li {
     margin: 0;
 }
 .half {
-    width: 49%;
+    width: 50%;
     margin: 0;
 }
 
@@ -551,6 +552,12 @@ li.power {
     background: green;
 }
 
+.rightcol {
+    margin-left: 12px;
+}
+.leftcol {
+    float: left;
+}
 div.graph {
 	background: #eee;
 	border-bottom: 1px solid black;
@@ -610,22 +617,21 @@ div.mapcontainer {
     border-right: 2px solid black;
 }
 
-li {
-	list-style-type: none;
+ul.trips {
+    display: inline;
 }
 li.even {
 	border-top: 1px solid #fcfcfc;
 	border-bottom: 1px solid #eee;
     background: #f8f8f8;
+	list-style-type: none;
 }
 li.odd {
-    background: #ffffff;
+	list-style-type: none;
 }
-ul.iconlist li {
-    margin-left: 0;
-    list-style-type: none;
+ul.routes li.routes {
+	list-style-type: none;
 }
-
 /* Calendar */
 table.month td,
 table.month th {
